--- a/android.html
+++ b/android.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>CURIOSIDADES DE TECNOLOGIA</h1>
+        <h2>Meu nome é Brenda Raposo</h2>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
     </header>
     <nav>
